correction width panel //TODO See current body in compass? or at least exobio check the refreshes (jumpHandler) ring planet

--- a/elite-warboard-missions/src/main/resources/css/elite-theme.css
+++ b/elite-warboard-missions/src/main/resources/css/elite-theme.css
@@ -3846,7 +3846,7 @@
     -fx-text-fill: -fx-elite-orange;
     -fx-font-size: 14px;
     -fx-font-weight: bold;
-    -fx-padding: 0 0 10px 0;
+    -fx-padding: 10 10 10px 10;
 }
 
 .exploration-subsection-title {
@@ -3863,7 +3863,7 @@
     -fx-border-width: 1px;
     -fx-border-radius: 5px;
     -fx-background-radius: 5px;
-    -fx-padding: 15px;
+    -fx-padding: 0px;
 }
 
 .exploration-visual-placeholder {
